version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/ABAQUS/AbaqusKeyword.rst.txt
.. vale off



:class:`AbaqusKeyword`
======================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.ABAQUS.AbaqusKeyword(iGenericCommand: Ansys.Common.Interop.FEParsePlugin_ABAQUS.IAbaqusKeyword)

   Bases: :py:obj:`object`


   
   Represents an Abaqus keyword (with arguments and data lines).
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: AbaqusKeyword

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Arguments`
            - Gets the arguments.
          * - :py:attr:`~DataLines`
            - Gets the data lines.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.







Property detail
---------------
.. py:property:: Arguments
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.ABAQUS.AbaqusKeywordArgumentColl]


   
   Gets the arguments.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataLines
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.ABAQUS.AbaqusKeywordDataLineColl]


   
   Gets the data lines.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on